--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "ibarbitrary's blog"
 description: "A personal blog."
-baseurl: "/"
-url: "https://ibarbitrary.github.io"
+baseurl: ""
+url: ""
 
 #google_analytics: UA-NNNNNNNN-N
 
