--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "ibarbitrary's blog"
 description: "A personal blog."
 baseurl: ""
-url: ""
+url: "ibarbitrary.github.io/blog"
 
 #google_analytics: UA-NNNNNNNN-N
 
