--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "ibarbitrary's blog"
 description: "A personal blog."
-baseurl: ""
-url: "ibarbitrary.github.io/blog"
+baseurl: "/blog"
+url: "ibarbitrary.github.io"
 
 #google_analytics: UA-NNNNNNNN-N
 
