--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ header_pages:
   - about.md
   - tags.html
 
-footer: 'follow on <a href="https://instagram.com/IBArbitrary">instagram</a>'
+footer: 'follow on <a href="https://instagram.com/IBArbitrary">instagram</a>, <a href="https://github.com/IBArbitrary">github</a>'
 
 plugins:
   - jekyll-seo-tag
