--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "ibarbitrary's blog"
-description: "A personal blog."
+description: "A personal blog for science, tech, linux and random stuffs."
 baseurl: "/blog"
 url: "ibarbitrary.github.io"
 
@@ -9,7 +9,7 @@ header_pages:
   - about.md
   - tags.html
 
-footer: 'follow on <a href="https://instagram.com/IBArbitrary">instagram</a>, <a href="https://github.com/IBArbitrary">github</a>'
+footer: 'Find me on <a href="https://instagram.com/IBArbitrary">instagram</a>, <a href="https://github.com/IBArbitrary">github</a>'
 
 plugins:
   - jekyll-seo-tag
